<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HorasPolice</string>
    <string name="lang">ar</string>
    <string name="about_contact_us" tools:ignore="MissingTranslation">ﺇﺗﺼﻞ ﺑﻨﺎ</string>
    <string name="about_instagram" tools:ignore="MissingTranslation">ﺗﺎﺑﻌﻨﺎ ﻋﻠﻰ اﻹﻧﺴﺘﻐﺮاﻡ</string>
    <string name="about_facebook" tools:ignore="MissingTranslation">ﺗﺎﺑﻌﻨﺎ ﻋﻠﻰ اﻟﻔﻴﺲ ﺑﻮﻙ</string>
    <string name="about_play_store" tools:ignore="MissingTranslation">ﻗﻴِّﻢ اﻟتطبيق ﻋﻠﻰ اﻟﺒﻼﻱ ﺳﺘﻮﺭ</string>
    <string name="about_youtube" tools:ignore="MissingTranslation">ﺗﺎﺑﻌﻨﺎ ﻋﻠﻰ اﻟﻴﻮﺗﻮﺏ</string>
    <string name="about_twitter" tools:ignore="MissingTranslation">ﺗﺎﺑﻌﻨﺎ ﻋﻠﻰ اﻟﺘﻮﻳﺘﺮ</string>
    <string name="about_github" tools:ignore="MissingTranslation">ﺇﺳﺘﻨﺴﺦ اﻟﻤﺸﺮﻭﻉ</string>
    <string name="about_website" tools:ignore="MissingTranslation">ﺯﺭ ﻣﻮﻗﻌﻨﺎ</string>
    <string name="about_support_us" tools:ignore="MissingTranslation">دعم التطبيق</string>
    <string name="from_egypt" tools:ignore="MissingTranslation">دق, مصر</string>
    <string name="zekr" tools:ignore="MissingTranslation">إدخال عنوان البريد</string>
    <string name="off_1" tools:ignore="MissingTranslation">إيقاف</string>
    <string name="on_1" tools:ignore="MissingTranslation">تشغيل</string>
    <string name="delete_1" tools:ignore="MissingTranslation">إلغاء</string>
    <string name="save_1" tools:ignore="MissingTranslation">حفظ</string>
    <string name="error_cannot_write" tools:ignore="MissingTranslation">لا يمكن كتابة الصورة الملتقطة بواسطة الكاميرا.</string>
    <string name="error_cannot_open" tools:ignore="MissingTranslation">لا يمكن فتح الكاميرا.</string>
    <string name="error_cannot_get_permission" tools:ignore="MissingTranslation">إذن الكاميرا غير متوفر.</string>
    <string name="error_not_having_camera" tools:ignore="MissingTranslation">لا يحتوي جهازك على كاميرا أمامية.</string>
    <string name="error_camera_permission_denied" tools:ignore="MissingTranslation">تم رفض إذن الكاميرا.</string>
    <string name="dialog_title" tools:ignore="MissingTranslation">النسخة الجديدة متاحة</string>
    <string name="dialog_message" tools:ignore="MissingTranslation">يتوفر إصدار جديد من التطبيق ، يرجى النقر أدناه لتحديث أحدث إصدار.</string>
    <string name="fetchs" tools:ignore="MissingTranslation">إتصال إنترنت</string>
    <string name="sharefacebook" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Facebook)</string>
    <string name="sharetwitter" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Twitter)</string>
    <string name="sharegmail" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Gmail)</string>
    <string name="sharewhatapp" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(What\'s App)</string>
    <string name="shareinstagram" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Instagram)</string>
    <string name="sharetumblr" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Tumblr)</string>
    <string name="shareviber" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Viber)</string>
    <string name="sharelinkedin" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Linkedin)</string>
    <string name="sharesnapchat" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Snapchat)</string>
    <string name="shareskype" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Skype)</string>
    <string name="sharetelegram" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Telegram)</string>
    <string name="sharereddit" tools:ignore="MissingTranslation">مشاركة رابط التطبيق على(Reddit)</string>
    <string name="screenlock" tools:ignore="MissingTranslation">قفل الشاشة</string>
    <string name="save_setting" tools:ignore="MissingTranslation">حفظ الأعدادات</string>
    <string name="permission_accessibility_setting_description" tools:ignore="MissingTranslation">قم بتشغيل وإغلاق جميع المفاتيح الأساسية بما في ذلك أزرار HOME و RECENTS و BACK و MENU. قد يتم تحذيرك بشأن مخاطر الخصوصية المحتملة ، فهذا مجرد تحذير إعلامي منتظم لأي خدمة وصول. نحن نعدك أبدًا بجمع معلوماتك الشخصية في خدمة الوصول هذه.</string>
    <string name="Running" tools:ignore="MissingTranslation">العمل في الخلفية</string>
    <string name="slide_up_to_unlock" tools:ignore="MissingTranslation">السحب لأعلى إلغاء القفل</string>
    <string name="release_to_unlock" tools:ignore="MissingTranslation">حرر اللمس للفتح</string>
    <string name="rationale_title" tools:ignore="MissingTranslation">إذن مطلوب</string>
    <string name="rationale_message" tools:ignore="MissingTranslation">نحتاج إلى إذن لكتابة <b>تخزين</b> والعثور على <b>موقعك</b></string>
    <string name="copy_right2" tools:ignore="MissingTranslation">هذا من فضل ربى</string>
    <string name="copy_right" translatable="false">Police Android %1$d</string>
    <string name="deviceLocationUtil_default_rationale_request_title" tools:ignore="MissingTranslation">إذن الموقع مطلوب</string>
    <string name="deviceLocationUtil_default_rationale_request_messageBody" tools:ignore="MissingTranslation">يتطلب هذا التطبيق أذونات الموقع من أجل توفير وظيفة معرفة بالموقع. إذا لم يتم منح الإذن ، فقد لا تعمل أي ميزات تعتمد على هذه الوظيفة بشكل صحيح.</string>
    <string name="deviceLocationUtil_request_returned_null"  translatable="false">Location request returned null</string>
    <string name="deviceLocationUtil_requests_currently_active"  translatable="false">Device is already receiving location updates</string>
    <string name="deviceLocationUtil_location_provided_by_lastLocation" translatable="false">
        Location provided by mLocationClient.getLastLocation()
    </string>
    <string name="deviceLocationUtil_location_provided_by_locationUpdates"  translatable="false">
        Location provided by mLocationClient.requestLocationUpdates()
    </string>
    <string name="deviceLocationUtil_location_settings_satisfied"  translatable="false">
        Location settings satisfied
    </string>
    <string name="deviceLocationUtil_location_settings_not_satisfied"  translatable="false">
        Location settings not satisfied. Attempting to resolve…
    </string>
    <string name="deviceLocationUtil_location_updates_removed"  translatable="false">Location updates removed</string>
    <string name="deviceLocationUtil_location_updates_resumed"  translatable="false">Location updates resumed</string>
    <string name="deviceLocationUtil_geocoder_not_available"  translatable="false">Geocoder not available. Check network connection.</string>
    <string name="deviceLocationUtil_geocoder_invalid_latLong"  translatable="false">Invalid latitude or longitude</string>
    <string name="deviceLocationUtil_geocoder_address_not_found"  translatable="false">No address found for this location</string>
    <string name="deviceLocationUtil_geocoder_invalid_element"  translatable="false">Invalid element code</string>
    <string name="output_failed"  translatable="false">Unable to get location: %1$s</string>
    <string name="output_location"  translatable="false">Lat: %1$s Long: %2$s</string>
    <string name="output_updates"  translatable="false">
        Receiving location updates\n
        Updates received: %1$s
    </string>
    <string name="google_maps_key"  translatable="false">AIzaSyB75vmxVyqB2utEYSoCG12iuux3sfEqa0U</string>
    <string name="google_maps_key_DEBUG"  translatable="false">AIzaSyAvmacywucXPnt8YILXFakf_jYK1opk3Tc</string>
    <string name="please_chacke_your_internet" tools:ignore="MissingTranslation">يرجى التحقق من اتصالك بالإنترنت والموقع. حاول مرة أخري</string>
    <string name="retry" tools:ignore="MissingTranslation">حاول مجددا</string>
    <string name="please_chacke_internet_startprogram" tools:ignore="MissingTranslation">هذا التطبيق لا يعمل دون الإنترنت والموقع ، وهذا لأفضل خدمة.</string>
    <string name="no_internet_title" tools:ignore="MissingTranslation">لا يوجد اتصال إنترنت</string>
    <string name="no_internet_body" tools:ignore="MissingTranslation">أنت غير متصل بالإنترنت والموقع</string>
    <string name="wifi_on" tools:ignore="MissingTranslation">واي فاي</string>
    <string name="mobile" tools:ignore="MissingTranslation">بيانات المحمول</string>
    <string name="airplane" tools:ignore="MissingTranslation">وضع الطيران</string>
    <string name="location" tools:ignore="MissingTranslation">موقعك</string>
    <string name="turn_on" tools:ignore="MissingTranslation">يرجى تشغيل</string>
    <string name="turn_off" tools:ignore="MissingTranslation">يرجى الإيقاف</string>
    <string name="airplane_on" tools:ignore="MissingTranslation">لقد قمت بتشغيل وضع الطائرة.</string>
    <string name="please_turn_on" tools:ignore="MissingTranslation">يرجى تشغيل بيانات الجوال</string>
    <string name="turn_on_wifi" tools:ignore="MissingTranslation">تشغيل واي فاي</string>
    <string name="please_turn_on_location" tools:ignore="MissingTranslation">يرجى تشغيل الموقع</string>
    <string name="please_turn_off_Airplane" tools:ignore="MissingTranslation">يرجى إيقاف تشغيل وضع الطائرة</string>
    <string name="why_connect_internet" tools:ignore="MissingTranslation">أهمية إتصال الأنترنت</string>
    <string name="lesson_WIFI" tools:ignore="MissingTranslation">عند تفعيل الأنترنت من خلال بيانات الهاتف او الواى فاى يتمكن التطبيق من إرسال صورة من الكاميرا الأمامية صورة من خرائط جوجل لموقع الهاتف مع الوقت والتاريخ.</string>
    <string name="why_connect_location" tools:ignore="MissingTranslation">أهمية تحديد موقع الهاتف</string>
    <string name="esson_LOCATION" tools:ignore="MissingTranslation">عند تفعيل موقع الهاتف يتمكن التطبيق من عمل  صورة من خرائط جوجل لمكان الهاتف فى دائرة قطرها 70 متر</string>
    <string name="why_put_google_mail" tools:ignore="MissingTranslation">أهمية إدخال بريدك الإلكترونى</string>
    <string name="lesson_EMAIL" tools:ignore="MissingTranslation">عند إدخال بريدك الإلكترونى يقوم التطبيق بإرسال صورة الكاميرا الأمامية وموقع الهاتف من بريد التطبيق إلى البريد المدخل ولنجاح عمليه الإرسال يجب تفعيل الموقع ولإتصال الأنترنت</string>
    <string name="why_important_screen" tools:ignore="MissingTranslation">أهمية قفل الشاشة</string>
    <string name="lesson_SCREEN_LOCK" tools:ignore="MissingTranslation">عند فتح قفل الشاشة تتم عمليه حفظ الصور فى مجلد</string>
    <string name="why_save_settings" tools:ignore="MissingTranslation">أهمية حفظ الإعدادات</string>
    <string name="lesson_save_settings" tools:ignore="MissingTranslation">يجب حفظ الإعدادات من قائمة البريد الإلكترونى لنجاح عملية الإرسال</string>
    <string name="why_this_app_good_and_for_what_use" tools:ignore="MissingTranslation">أهمية Police Android</string>
    <string name="lesson_discription_app1" tools:ignore="MissingTranslation">1.الحالات الطارئة بأنواعها المختلفة التى يكون من المهم فيها معرفة وقت وتاريخ وجود شخص فى موقع معين. و الأستدلال عن الأماكن فبمجرد فتح الشخص للهاتف يرسل التطبيق مكانة.</string>
    <string name="lesson_discription_app2" tools:ignore="MissingTranslation">2.معرفة من يتجسس على هاتفك من خلال إلتقاط صورة لمن يقوم بفتح هاتفك مع الوقت والتاريخ من خلال صورة المكان.</string>
    <string name="lesson_discription_app3" tools:ignore="MissingTranslation">3.تتبع الأباء لأبنائهم من خلال تثبيت التطبيق على هاتف الأبن أو الأبنة وإخفائة بإستخدام تطبيق لإخفاء التطبيقات .وفى أوقات خروجهم من المنزل تتمكن من معرفه المكان مع الوقت والتاريخ فى كل مرة يقوم بفتح الهاتف.</string>
    <string name="lesson_discription_app4" tools:ignore="MissingTranslation">أخيراً لإفضل إستخدام لهذا التطبيق وأحسن أداء ,يجب البقاء على إتصال مع الأنترنت ومكان الهاتف.</string>
    <string name="lesson_discription_app5" tools:ignore="MissingTranslation">يتم حفظ صور الكاميرا الأمامية والمكان فى مجلد الهاتف. (Android/data/com.horaspolice/cache/) يجب المسح يديويا حسب الحاجة</string>
    <string name="expandable_card_view_image_content_description" translatable="false">Arrow to expand card</string>
    <string name="infocs" tools:ignore="MissingTranslation">معلومات</string>
</resources>